--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -80,10 +81,12 @@
     "react-hot-toast": "^2.1.1",
     "react-icons": "^5.0.1",
     "react-resizable-panels": "^1.0.9",
+    "react-router-dom": "^6.21.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
     "tippy.js": "^6.3.7",
+    "use-debounce": "^10.0.0",
     "uuid": "^9.0.0",
     "vaul": "^0.8.0"
   },
