--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,11 +14,9 @@ tauri-build = { version = "1.5", features = [] }
 tauri = { version = "1.5", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-diesel = { version = "2.1.0",  features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
 dotenvy = "0.15"
-libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
-diesel_migrations = "2.1.0"
 dirs = "5.0.1"
+cozo = "0.7.6"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
