--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tauri-apps/api": "^1.5.2",
+    "@tauri-apps/api": "^2.0.0-beta.0",
     "@tippyjs/react": "^4.2.6",
     "@tiptap-pro/extension-drag-handle": "2.1.0",
     "@tiptap-pro/extension-drag-handle-react": "2.1.0",
@@ -84,14 +84,13 @@
     "react-router-dom": "^6.21.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
     "tippy.js": "^6.3.7",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.0",
     "vaul": "^0.8.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.8",
+    "@tauri-apps/cli": "^2.0.0-beta.1",
     "@types/node": "^20.11.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
