--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,10 +8,10 @@ repository = ""
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["shell-open"] }
+tauri = { version = "2.0.0-beta", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 diesel = { version = "2.1.0",  features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
@@ -19,8 +19,14 @@ dotenvy = "0.15"
 libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
 diesel_migrations = "2.1.0"
 dirs = "5.0.1"
+tauri-plugin-shell = "2.0.0-beta.0"
+
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[lib]
+name = "app_lib"
+crate-type = ["staticlib", "cdylib", "rlib"]
