--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.16.0",
     "@tauri-apps/api": "^1.5.2",
     "@tippyjs/react": "^4.2.6",
     "@tiptap/core": "2.0.4",
