--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@tiptap/extension-highlight": "2.0.4",
     "@tiptap/extension-history": "^2.1.16",
     "@tiptap/extension-horizontal-rule": "2.0.4",
-    "@tiptap/extension-image": "2.0.4",
+    "@tiptap/extension-image": "^2.0.4",
     "@tiptap/extension-link": "2.0.4",
     "@tiptap/extension-ordered-list": "2.0.4",
     "@tiptap/extension-paragraph": "2.0.4",
