--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
+    "diff": "^5.2.0",
     "langchain": "^0.1.37",
     "lowlight": "^2.9.0",
     "lucide-react": "^0.263.1",
@@ -88,6 +89,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.14",
+    "@types/diff": "^5.2.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
