--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.17.3",
-    "@tauri-apps/api": "^1.5.6",
+    "@tauri-apps/api": "^2.0.0-beta.12",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.3",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.4",
     "@tippyjs/react": "^4.2.6",
     "@tiptap/core": "2.0.4",
     "@tiptap/extension-bullet-list": "2.0.4",
@@ -81,7 +83,6 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
     "tippy.js": "^6.3.7",
     "tiptap-markdown": "^0.8.10",
     "use-debounce": "^10.0.0",
@@ -89,7 +90,7 @@
     "vaul": "^0.8.9"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.14",
+    "@tauri-apps/cli": "^2.0.0-beta.18",
     "@types/diff": "^5.2.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
