add android build, break global shortcuts

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,6 +10,10 @@ edition = "2021"
 [build-dependencies]
 tauri-build = { version = "2.0.0-beta", features = [] }
 
+[lib]
+name = "app_lib"
+crate-type = ["staticlib", "cdylib", "rlib"]
+
 [dependencies]
 tauri = { version = "2.0.0-beta", features = [ "protocol-asset"] }
 serde = { version = "1.0", features = ["derive"] }
