--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 dotenvy = "0.15"
 dirs = "5.0.1"
 chrono = "0.4.38"
+time = "0.3.36"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 webkit2gtk = "0.18" # if tauri build fails, make sure to match this version to what we have in tauri
