--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.17.3",
     "@tauri-apps/api": "^1.5.6",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0-rc.0",
+    "@tauri-apps/plugin-shell": "^2.0.0-rc.0",
     "@tippyjs/react": "^4.2.6",
     "@tiptap/core": "2.0.4",
     "@tiptap/extension-bullet-list": "2.0.4",
