--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,25 +8,28 @@ repository = ""
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2.0.0-rc", features = [] }
+
+[lib]
+name = "app_lib"
+crate-type = ["staticlib", "cdylib", "rlib", "lib"]
 
 [dependencies]
-tauri = { version = "1.6.5", features = [ "protocol-asset", "global-shortcut-all", "shell-open"] }
+tauri = { version = "2.0.0-rc", features = [ "protocol-asset"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenvy = "0.15"
 dirs = "5.0.1"
 chrono = "0.4.38"
 time = "0.3.36"
+tauri-plugin-shell = "2.0.0-rc.0"
 
-[target.'cfg(target_os = "linux")'.dependencies]
-webkit2gtk = "0.18" # if tauri build fails, make sure to match this version to what we have in tauri
-
-[target.'cfg(target_os = "macos")'.dependencies]
-objc = "0.2"
 
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "2.0.0-rc.0"
