--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.17.3",
-    "@tauri-apps/api": "^1.5.6",
+    "@tauri-apps/api": "^2.0.0-rc.1",
     "@tauri-apps/plugin-global-shortcut": "^2.0.0-rc.0",
     "@tauri-apps/plugin-shell": "^2.0.0-rc.0",
     "@tippyjs/react": "^4.2.6",
@@ -91,7 +91,7 @@
     "vaul": "^0.8.9"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.14",
+    "@tauri-apps/cli": "^2.0.0-rc.3",
     "@types/diff": "^5.2.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
