--- a/src-tauri/gen/android/app/.gitignore
+++ b/src-tauri/gen/android/app/.gitignore
@@ -1,5 +1,6 @@
-/src/main/java/bons/bonsai_app/generated
+/src/main/java/bons/ai/generated
 /src/main/jniLibs/**/*.so
 /src/main/assets/tauri.conf.json
 /tauri.build.gradle.kts
 /proguard-tauri.pro
+/tauri.properties
