--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,18 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'macos-latest' # for Arm based macs (M1 and above).
-            args: '--target aarch64-apple-darwin'
-          - platform: 'macos-latest' # for Intel based macs.
-            args: '--target x86_64-apple-darwin'
-          - platform: 'ubuntu-22.04'
-            args: ''
-          - platform: 'windows-latest'
-            args: ''
+          - platform: "macos-latest" # for Arm-based Macs (M1 and above).
+            args: "--target aarch64-apple-darwin"
+            rust-target: "aarch64-apple-darwin"
+          - platform: "macos-latest" # for Intel-based Macs.
+            args: "--target x86_64-apple-darwin"
+            rust-target: "x86_64-apple-darwin"
+          - platform: "ubuntu-22.04" # for Ubuntu (Tauri v2)
+            args: "--target x86_64-unknown-linux-gnu"
+            rust-target: "x86_64-unknown-linux-gnu"
+          - platform: "windows-latest" # for Windows
+            args: "--target x86_64-pc-windows-msvc"
+            rust-target: "x86_64-pc-windows-msvc"
 
     runs-on: ${{ matrix.platform }}
     steps:
