--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,21 +8,21 @@ repository = ""
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc", features = [] }
+tauri-build = { version = "2.0.0", features = [] }
 
 [lib]
 name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [dependencies]
-tauri = { version = "2.0.0-rc", features = [ "protocol-asset"] }
+tauri = { version = "2.0.0", features = [ "protocol-asset"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenvy = "0.15"
 dirs = "5.0.1"
 chrono = "0.4.38"
 time = "0.3.36"
-tauri-plugin-shell = "2.0.0-rc.0"
+tauri-plugin-shell = "2.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
