--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,9 @@ dirs = "5.0.1"
 chrono = "0.4.38"
 time = "0.3.36"
 tauri-plugin-shell = "2.0.0"
+sqlite-vec = "0.1.3"
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
+tokio = { version = "1.41.0", features = ["full"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
