--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ sqlite-vec = "0.1.3"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
 libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
 tokio = { version = "1.41.0", features = ["full"] }
+uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
