--- a/package.json
+++ b/package.json
@@ -79,9 +79,12 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-hotkeys-hook": "^4.6.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^1.0.10",
     "react-router-dom": "^6.23.1",
+    "rehype-highlight": "^7.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
