--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@langchain/community": "^0.0.40",
-    "@langchain/ollama": "^0.1.1",
+    "@langchain/core": "^0.3.19",
+    "@langchain/ollama": "^0.1.2",
     "@langchain/openai": "^0.0.14",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
