--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "pretauri": "poetry run python src-python/pyinstaller.py"
   },
   "dependencies": {
     "@langchain/community": "^0.0.40",
